<resources>
    <string name="app_name">UXor</string>
    <string name="new_event">New event</string>
    <string name="recycle_view_orientation">Orientation</string>
    <string name="recycle_view_orientation_vertical">Vertical orientation</string>
    <string name="recycle_view_orientation_horizontal">Horizontal orientation</string>
    <string name="recycle_view_orientation_grid">Grid orientation</string>
    <string name="settings">Settings</string>
    <string name="clear_trash">Clear Trash</string>
    <string name="setTime">Set Time</string>
    <string name="setDate">Set Date</string>
    <string name="saveEvent">Save</string>
    <string name="setEventName">Set Event Name</string>
    <string name="setDescription">Description</string>
    <string name="delete_event">Delete Event</string>
    <string name="delete_event_question">Delete this event?</string>
    <string name="save_changed">Save changes?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name">Enter event name</string>
    <string name="empty_view_text">You do not have any events!\n
    Create new Event</string>
    <string name="empty_trash_view_text">Trash is empty!</string>
    <string name="category_description_type">Type category</string>
    <string name="trash">Trash</string>
    <string name="events">Events</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="search">Search</string>
    <string name="support">Support</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="sort">Sort</string>
    <array name="sort_types">
        <item>By time</item>
        <item>By priority</item>
        <item>By title</item>
    </array>
    <string-array name="priority">
        <item>Low priority</item>
        <item>Middle priority</item>
        <item>High priority</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_bar_iv_content_description">UXor</string>
    <string name="user">USER</string>
    <string name="date">Date</string>
    <string name="event_name">EventName</string>
    <string name="title_activity_settings1">Settings</string>

    <!-- Preference Titles -->
    <!--Preference Headers Titles-->
    <string name="pref_header_general">General</string>
    <string name="pref_header_account">Account</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- General Preferences -->
    <!-- Account Preferences -->
    <!-- Notification Preferences -->
</resources>
