<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_event_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.exemple.uksorganizer.ui.EventActivity">

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#ff303030"
        app:layout_constraintEnd_toStartOf="@+id/textViewDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:text="@string/setDate"
        android:textSize="14sp"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toStartOf="@+id/textViewTime"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_toEndOf="@id/textViewDate"
        android:clickable="true"
        android:text="@string/setTime"
        android:textSize="14sp"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setEventName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategory"
        app:layout_constraintVertical_bias="0.05000000" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintVertical_bias="0.05" />

    <Spinner
        android:id="@+id/spinnerPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#ff303030"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        app:layout_constraintVertical_bias="0.05" />

    <CheckBox
        android:id="@+id/checkBoxNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="Notification"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPriority" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxNotification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/checkBoxNotification"
        app:layout_constraintTop_toTopOf="@+id/checkBoxNotification"
        app:srcCompat="@drawable/ic_notification_important_24px" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>